test/types/range/cast-assign-init/illegal-inits.0-5.good
illegal-inits.chpl:8: error: initializing a range with idxType bool from a range with idxType uint(64)
